[gd_scene load_steps=55 format=3 uid="uid://owiltak1cxk8"]

[ext_resource type="PackedScene" uid="uid://dtoeo3xx4wyyp" path="res://presets/gui/StatIndicator.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://ctgk7c648iyds" path="res://data/press/splash/splashscreen.png" id="2_u1iab"]
[ext_resource type="Script" path="res://sources/gui/Gui.gd" id="3"]
[ext_resource type="Script" path="res://sources/gui/StatIndicator.gd" id="3_5uo3f"]
[ext_resource type="PackedScene" uid="uid://dml4oic211pyo" path="res://presets/gui/WindowButton.tscn" id="3_sl5jl"]
[ext_resource type="PackedScene" uid="uid://c2q5vtkxo04dp" path="res://presets/gui/ActionBox.tscn" id="4"]
[ext_resource type="Shader" path="res://sources/shaders/ControlMask.gdshader" id="4_60kv4"]
[ext_resource type="Texture2D" uid="uid://desxm6lbhpunn" path="res://data/graphics/gui/menu/menubar_button.png" id="4_ah7dm"]
[ext_resource type="Theme" uid="uid://dhb6h35g1bk0x" path="res://data/themes/DefaultTheme.tres" id="4_wx5hs"]
[ext_resource type="PackedScene" uid="uid://dphlgrm0elh6y" path="res://presets/gui/chat/Chat.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://qfpxygkhxldq" path="res://data/graphics/gui/menu/menubar_button_pressed.png" id="5_fdh06"]
[ext_resource type="Texture2D" uid="uid://ch5ego7ihyo0o" path="res://data/graphics/gui/icon/inventory.png" id="5_ntnop"]
[ext_resource type="Texture2D" uid="uid://c3hjdee3hxsoy" path="res://data/graphics/gui/icon/chat.png" id="6_2quic"]
[ext_resource type="Texture2D" uid="uid://qaut55ogln33" path="res://data/graphics/gui/menu/menubar_content.png" id="6_mf0sy"]
[ext_resource type="Script" path="res://sources/gui/MenuIndicator.gd" id="6_npwx0"]
[ext_resource type="Script" path="res://sources/gui/FloatingWindows.gd" id="7"]
[ext_resource type="Texture2D" uid="uid://c233nlbjjlb5l" path="res://data/graphics/gui/icon/map.png" id="7_cv35r"]
[ext_resource type="PackedScene" uid="uid://cjgijbfxixe67" path="res://presets/gui/Login.tscn" id="7_lrq68"]
[ext_resource type="PackedScene" uid="uid://c6nwveqo000dl" path="res://presets/gui/Quit.tscn" id="8"]
[ext_resource type="Texture2D" uid="uid://c7ulpgvdia2sl" path="res://data/graphics/gui/icon/emotes.png" id="8_ppxwt"]
[ext_resource type="PackedScene" uid="uid://x1jkhsyls2i4" path="res://presets/gui/Minimap.tscn" id="9_myjuo"]
[ext_resource type="Texture2D" uid="uid://dwnxstfs54r7t" path="res://data/graphics/gui/icon/quests.png" id="9_vtuwx"]
[ext_resource type="PackedScene" uid="uid://6pundiwfj5s1" path="res://presets/shaders/HQ4x.tscn" id="10_id8es"]
[ext_resource type="Texture2D" uid="uid://b7iy5lm8t328h" path="res://data/graphics/gui/icon/glossary.png" id="10_mq57a"]
[ext_resource type="Texture2D" uid="uid://dbps18wiv7vlh" path="res://data/graphics/gui/icon/settings.png" id="11_17vy0"]
[ext_resource type="PackedScene" uid="uid://bagfvnt2bhttv" path="res://presets/shaders/CRT.tscn" id="11_x7rk2"]
[ext_resource type="Texture2D" uid="uid://cqqe5ynqasynu" path="res://data/graphics/gui/icon/skills.png" id="13_h6wc7"]
[ext_resource type="PackedScene" uid="uid://3ldimch2l6rv" path="res://presets/gui/Scrollable.tscn" id="14_xidsc"]
[ext_resource type="JSON" path="res://data/db/news.json" id="15_q438c"]
[ext_resource type="PackedScene" uid="uid://b5tdyq8opcs0u" path="res://presets/gui/Settings.tscn" id="16_gapih"]
[ext_resource type="JSON" path="res://data/db/credits.json" id="16_pfh0e"]
[ext_resource type="PackedScene" uid="uid://lkl6f0td76mu" path="res://presets/gui/Notification.tscn" id="17_64u4l"]
[ext_resource type="Script" path="res://sources/gui/Sticks.gd" id="18_6nrx4"]
[ext_resource type="Texture2D" uid="uid://c6vlftjsnocs3" path="res://data/graphics/gui/mobile/background.png" id="18_lb78w"]
[ext_resource type="Texture2D" uid="uid://cyuj6w585tm0y" path="res://data/graphics/gui/mobile/button.png" id="20_1vdgt"]
[ext_resource type="PackedScene" uid="uid://tqcjqyaicaol" path="res://presets/gui/contexts/ContextMenuV.tscn" id="20_px3po"]
[ext_resource type="Texture2D" uid="uid://4lbn2136wjw3" path="res://data/graphics/gui/mobile/buttonY.png" id="22_v5bsw"]
[ext_resource type="Texture2D" uid="uid://bncxvjj4nmem8" path="res://data/graphics/gui/mobile/buttonX.png" id="23_8ulos"]
[ext_resource type="Texture2D" uid="uid://m862d3fndtf" path="res://data/graphics/gui/mobile/buttonY_pressed.png" id="23_veq0v"]
[ext_resource type="Texture2D" uid="uid://3vvdehbmo43i" path="res://data/graphics/gui/mobile/buttonB.png" id="24_idf5b"]
[ext_resource type="Texture2D" uid="uid://dp34vjt8lj8n5" path="res://data/graphics/gui/mobile/buttonA.png" id="25_6cklw"]
[ext_resource type="Texture2D" uid="uid://dfmkxvhnjsnkw" path="res://data/graphics/gui/mobile/buttonX_pressed.png" id="25_8t8bb"]
[ext_resource type="Texture2D" uid="uid://reqjw3bt0dtj" path="res://data/graphics/gui/mobile/buttonB_pressed.png" id="27_rgxqc"]
[ext_resource type="Texture2D" uid="uid://dgiywkj6go44v" path="res://data/graphics/gui/mobile/buttonA_pressed.png" id="29_ioa8a"]
[ext_resource type="PackedScene" uid="uid://dhdq88so6g3yh" path="res://presets/gui/Stats.tscn" id="35_d1kq3"]
[ext_resource type="PackedScene" uid="uid://u31xl3ap3wd8" path="res://presets/gui/Inventory.tscn" id="35_j05ha"]
[ext_resource type="PackedScene" uid="uid://bmsbt0owg4j86" path="res://presets/Emote.tscn" id="37_v7lrk"]
[ext_resource type="PackedScene" uid="uid://b5jgfu2dukotm" path="res://presets/gui/Skill.tscn" id="38_ompay"]
[ext_resource type="PackedScene" uid="uid://b8frfkv2y8x6" path="res://presets/gui/RespawnWindow.tscn" id="44_7o5pa"]
[ext_resource type="Script" path="res://sources/gui/Dialogue.gd" id="45_tnbk2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wjdwk"]
shader = ExtResource("4_60kv4")
shader_parameter/progress = 0.0
shader_parameter/inverted = true

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hg7ie"]
texture = ExtResource("4_ah7dm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w48pk"]
texture = ExtResource("5_fdh06")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5qyvn"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("3")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_u1iab")
expand_mode = 1

[node name="Overlay" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_wx5hs")
theme_override_constants/margin_left = 19
theme_override_constants/margin_top = 19
theme_override_constants/margin_right = 19
theme_override_constants/margin_bottom = 19

[node name="Sections" type="VBoxContainer" parent="Overlay"]
layout_mode = 2

[node name="Indicators" type="HBoxContainer" parent="Overlay/Sections"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
alignment = 1

[node name="Stat" type="Control" parent="Overlay/Sections/Indicators"]
layout_mode = 2
size_flags_horizontal = 2
script = ExtResource("3_5uo3f")

[node name="StatContent" parent="Overlay/Sections/Indicators/Stat" instance=ExtResource("2")]
layout_mode = 2
offset_right = 273.0
offset_bottom = 61.0
size_flags_horizontal = 2
size_flags_vertical = 0
mouse_filter = 0
script = null

[node name="StatButton" type="TextureButton" parent="Overlay/Sections/Indicators/Stat"]
custom_minimum_size = Vector2(62, 61)
layout_mode = 0
offset_right = 62.0
offset_bottom = 61.0
size_flags_horizontal = 10
size_flags_vertical = 0

[node name="Menu" type="Control" parent="Overlay/Sections/Indicators"]
layout_mode = 2
size_flags_horizontal = 10
script = ExtResource("6_npwx0")

[node name="MenuContent" type="TextureRect" parent="Overlay/Sections/Indicators/Menu"]
material = SubResource("ShaderMaterial_wjdwk")
layout_mode = 2
offset_left = -511.0
offset_top = 13.0
offset_right = -38.0
offset_bottom = 55.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 10
size_flags_vertical = 0
texture = ExtResource("6_mf0sy")
stretch_mode = 3

[node name="HBoxItems" type="HBoxContainer" parent="Overlay/Sections/Indicators/Menu/MenuContent"]
use_parent_material = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -404.0
offset_top = -18.0
offset_right = -46.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 0
mouse_filter = 0
alignment = 2

[node name="Inventory" parent="Overlay/Sections/Indicators/Menu/MenuContent/HBoxItems" node_paths=PackedStringArray("targetWindow") instance=ExtResource("3_sl5jl")]
use_parent_material = true
layout_mode = 2
icon = ExtResource("5_ntnop")
flat = true
icon_alignment = 1
targetWindow = NodePath("../../../../../../../Windows/Floating/Inventory")
targetShortcut = &"ui_inventory"

[node name="Minimap" parent="Overlay/Sections/Indicators/Menu/MenuContent/HBoxItems" node_paths=PackedStringArray("targetWindow") instance=ExtResource("3_sl5jl")]
use_parent_material = true
layout_mode = 2
icon = ExtResource("7_cv35r")
flat = true
targetWindow = NodePath("../../../../../../../Windows/Floating/Minimap")
targetShortcut = &"ui_minimap"

[node name="Skill" parent="Overlay/Sections/Indicators/Menu/MenuContent/HBoxItems" node_paths=PackedStringArray("targetWindow") instance=ExtResource("3_sl5jl")]
use_parent_material = true
layout_mode = 2
icon = ExtResource("13_h6wc7")
flat = true
targetWindow = NodePath("../../../../../../../Windows/Floating/Skill")
targetShortcut = &"ui_skill"

[node name="Chat" parent="Overlay/Sections/Indicators/Menu/MenuContent/HBoxItems" node_paths=PackedStringArray("targetWindow") instance=ExtResource("3_sl5jl")]
use_parent_material = true
layout_mode = 2
icon = ExtResource("6_2quic")
flat = true
targetWindow = NodePath("../../../../../../../Windows/Floating/Chat")
targetShortcut = &"ui_chat"

[node name="Emote" parent="Overlay/Sections/Indicators/Menu/MenuContent/HBoxItems" node_paths=PackedStringArray("targetWindow") instance=ExtResource("3_sl5jl")]
use_parent_material = true
layout_mode = 2
icon = ExtResource("8_ppxwt")
flat = true
targetWindow = NodePath("../../../../../../../Windows/Floating/Emote")
targetShortcut = &"ui_emote"

[node name="Settings" parent="Overlay/Sections/Indicators/Menu/MenuContent/HBoxItems" node_paths=PackedStringArray("targetWindow") instance=ExtResource("3_sl5jl")]
use_parent_material = true
layout_mode = 2
icon = ExtResource("11_17vy0")
flat = true
targetWindow = NodePath("../../../../../../../Windows/Floating/Settings")
targetShortcut = &"ui_settings"

[node name="News" parent="Overlay/Sections/Indicators/Menu/MenuContent/HBoxItems" node_paths=PackedStringArray("targetWindow") instance=ExtResource("3_sl5jl")]
use_parent_material = true
layout_mode = 2
icon = ExtResource("9_vtuwx")
flat = true
targetWindow = NodePath("../../../../../../../Windows/Floating/News")
targetShortcut = &"ui_news"

[node name="Credits" parent="Overlay/Sections/Indicators/Menu/MenuContent/HBoxItems" node_paths=PackedStringArray("targetWindow") instance=ExtResource("3_sl5jl")]
use_parent_material = true
layout_mode = 2
icon = ExtResource("10_mq57a")
flat = true
targetWindow = NodePath("../../../../../../../Windows/Floating/Credit")
targetShortcut = &"ui_credits"

[node name="MenuButton" type="Button" parent="Overlay/Sections/Indicators/Menu"]
custom_minimum_size = Vector2(62, 61)
layout_direction = 3
layout_mode = 2
offset_right = 62.0
offset_bottom = 61.0
size_flags_horizontal = 10
size_flags_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxTexture_hg7ie")
theme_override_styles/disabled = SubResource("StyleBoxTexture_hg7ie")
theme_override_styles/hover = SubResource("StyleBoxTexture_hg7ie")
theme_override_styles/pressed = SubResource("StyleBoxTexture_w48pk")
theme_override_styles/normal = SubResource("StyleBoxTexture_hg7ie")

[node name="Notification" parent="Overlay/Sections" instance=ExtResource("17_64u4l")]
layout_mode = 2

[node name="Contexts" type="Control" parent="Overlay/Sections"]
z_index = 10
z_as_relative = false
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="Info" parent="Overlay/Sections/Contexts" instance=ExtResource("20_px3po")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -12.0
offset_bottom = 12.0
grow_vertical = 2
size_flags_vertical = 6
persistant = false

[node name="VBox" type="VBoxContainer" parent="Overlay/Sections/Contexts"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Buffer" type="Control" parent="Overlay/Sections/Contexts/VBox"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="BottomVbox" type="VBoxContainer" parent="Overlay/Sections/Contexts/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Dialogue" type="PanelContainer" parent="Overlay/Sections/Contexts/VBox/BottomVbox"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"DialogueBox"
script = ExtResource("45_tnbk2")

[node name="FixedHBox" type="HBoxContainer" parent="Overlay/Sections/Contexts/VBox/BottomVbox/Dialogue"]
layout_mode = 2

[node name="Scrollable" parent="Overlay/Sections/Contexts/VBox/BottomVbox/Dialogue/FixedHBox" instance=ExtResource("14_xidsc")]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_5qyvn")

[node name="Buffer" type="Control" parent="Overlay/Sections/Contexts/VBox/BottomVbox/Dialogue/FixedHBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="Button" type="Control" parent="Overlay/Sections/Contexts/VBox/BottomVbox/Dialogue"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="TouchButton" type="TouchScreenButton" parent="Overlay/Sections/Contexts/VBox/BottomVbox/Dialogue/Button"]
position = Vector2(-31, -31)
texture_normal = ExtResource("4_ah7dm")
texture_pressed = ExtResource("5_fdh06")

[node name="Label" type="Label" parent="Overlay/Sections/Contexts/VBox/BottomVbox/Dialogue/Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -7.0
offset_right = 20.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChoiceVbox" type="VBoxContainer" parent="Overlay/Sections/Contexts/VBox/BottomVbox"]
custom_minimum_size = Vector2(0, 115)
layout_mode = 2
size_flags_vertical = 8

[node name="Buffer" type="Control" parent="Overlay/Sections/Contexts/VBox/BottomVbox/ChoiceVbox"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Choice" parent="Overlay/Sections/Contexts/VBox/BottomVbox/ChoiceVbox" instance=ExtResource("20_px3po")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"DialogueBox"
fadeInDelay = 0.5
displayDelay = 0.0
fadeOutDelay = 0.3

[node name="Shortcuts" type="MarginContainer" parent="Overlay/Sections"]
custom_minimum_size = Vector2(0, 155)
layout_mode = 2
size_flags_vertical = 8

[node name="Sticks" type="HBoxContainer" parent="Overlay/Sections/Shortcuts"]
layout_mode = 2
script = ExtResource("18_6nrx4")

[node name="Direction" type="Control" parent="Overlay/Sections/Shortcuts/Sticks"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Direction" type="TouchScreenButton" parent="Overlay/Sections/Shortcuts/Sticks/Direction"]
texture_normal = ExtResource("18_lb78w")

[node name="Button" type="TextureRect" parent="Overlay/Sections/Shortcuts/Sticks/Direction/Direction"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -25.5
offset_right = 26.5
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(-26, -26)
mouse_filter = 2
theme = ExtResource("4_wx5hs")
theme_type_variation = &"FilledLosangeButton"
texture = ExtResource("20_1vdgt")

[node name="Actions" type="TextureRect" parent="Overlay/Sections/Shortcuts/Sticks"]
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("18_lb78w")

[node name="ButtonY" type="TouchScreenButton" parent="Overlay/Sections/Shortcuts/Sticks/Actions"]
position = Vector2(51, 5)
texture_normal = ExtResource("22_v5bsw")
texture_pressed = ExtResource("23_veq0v")

[node name="ButtonX" type="TouchScreenButton" parent="Overlay/Sections/Shortcuts/Sticks/Actions"]
position = Vector2(4, 52)
texture_normal = ExtResource("23_8ulos")
texture_pressed = ExtResource("25_8t8bb")

[node name="ButtonB" type="TouchScreenButton" parent="Overlay/Sections/Shortcuts/Sticks/Actions"]
position = Vector2(98, 52)
texture_normal = ExtResource("24_idf5b")
texture_pressed = ExtResource("27_rgxqc")

[node name="ButtonA" type="TouchScreenButton" parent="Overlay/Sections/Shortcuts/Sticks/Actions"]
position = Vector2(51, 99)
texture_normal = ExtResource("25_6cklw")
texture_pressed = ExtResource("29_ioa8a")

[node name="Boxes" parent="Overlay/Sections/Shortcuts" instance=ExtResource("4")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 0

[node name="Windows" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("4_wx5hs")
theme_override_constants/margin_top = 80

[node name="Floating" type="Control" parent="Windows"]
layout_mode = 2
mouse_filter = 2
script = ExtResource("7")

[node name="Quit" parent="Windows/Floating" instance=ExtResource("8")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -60.0
offset_right = 145.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="Inventory" parent="Windows/Floating" instance=ExtResource("35_j05ha")]
visible = false
show_behind_parent = false
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 973.0
offset_top = 135.0
offset_right = 1255.0
offset_bottom = 404.0
grow_horizontal = 1
grow_vertical = 1
saveOverlayState = true

[node name="Minimap" parent="Windows/Floating" instance=ExtResource("9_myjuo")]
visible = false
custom_minimum_size = Vector2(200, 125)
layout_mode = 2
offset_left = 1058.0
offset_top = 6.0
offset_right = 1258.0
offset_bottom = 131.0
saveOverlayState = true

[node name="Emote" parent="Windows/Floating" instance=ExtResource("37_v7lrk")]
visible = false
custom_minimum_size = Vector2(38, 38)
layout_mode = 2
offset_left = 68.0
offset_top = 25.0
offset_right = 306.0
offset_bottom = 68.0
saveOverlayState = true

[node name="Skill" parent="Windows/Floating" instance=ExtResource("38_ompay")]
layout_mode = 0
offset_left = 0.0
offset_top = 71.0
offset_right = 213.0
offset_bottom = 114.0
saveOverlayState = true

[node name="Chat" parent="Windows/Floating" instance=ExtResource("5")]
visible = false
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 22.0
offset_top = 433.0
offset_right = 420.0
offset_bottom = 622.0
grow_horizontal = 1
grow_vertical = 1
saveOverlayState = true

[node name="Login" parent="Windows/Floating" instance=ExtResource("7_lrq68")]
visible = false
layout_mode = 1
offset_left = 296.0
offset_top = 240.0
offset_right = 576.0
offset_bottom = 346.0

[node name="News" parent="Windows/Floating" instance=ExtResource("14_xidsc")]
visible = false
layout_mode = 2
offset_left = 737.0
offset_top = 55.0
offset_right = 1168.0
offset_bottom = 547.0
grow_horizontal = 2
grow_vertical = 2
jsonFile = ExtResource("15_q438c")

[node name="Credit" parent="Windows/Floating" instance=ExtResource("14_xidsc")]
visible = false
layout_mode = 2
offset_left = 23.0
offset_top = 85.0
offset_right = 451.0
offset_bottom = 583.0
jsonFile = ExtResource("16_pfh0e")

[node name="Settings" parent="Windows/Floating" instance=ExtResource("16_gapih")]
visible = false
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 446.0
offset_top = 176.0
offset_right = 764.0
offset_bottom = 486.0
grow_horizontal = 1
grow_vertical = 1

[node name="Respawn" parent="Windows/Floating" instance=ExtResource("44_7o5pa")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 280.0
offset_bottom = 80.0
grow_horizontal = 1
grow_vertical = 1

[node name="Stat" parent="Windows/Floating" instance=ExtResource("35_d1kq3")]
visible = false
layout_mode = 0
offset_left = 439.0
offset_top = 46.0
offset_right = 839.0
offset_bottom = 427.0

[node name="Shaders" type="CanvasLayer" parent="."]
layer = 128

[node name="HQ4x" parent="Shaders" instance=ExtResource("10_id8es")]
visible = false

[node name="CRT" parent="Shaders" instance=ExtResource("11_x7rk2")]
top_level = true

[connection signal="resized" from="Overlay" to="." method="_on_ui_margin_resized"]
[connection signal="pressed" from="Overlay/Sections/Indicators/Stat/StatButton" to="Overlay/Sections/Indicators/Stat" method="_on_button_pressed"]
[connection signal="pressed" from="Overlay/Sections/Indicators/Menu/MenuButton" to="Overlay/Sections/Indicators/Menu" method="_on_button_pressed"]
[connection signal="released" from="Overlay/Sections/Contexts/VBox/BottomVbox/Dialogue/Button/TouchButton" to="Overlay/Sections/Contexts/VBox/BottomVbox/Dialogue" method="ButtonPressed"]
[connection signal="pressed" from="Overlay/Sections/Shortcuts/Sticks/Direction/Direction" to="Overlay/Sections/Shortcuts/Sticks" method="_on_direction_button_down"]
[connection signal="released" from="Overlay/Sections/Shortcuts/Sticks/Direction/Direction" to="Overlay/Sections/Shortcuts/Sticks" method="_on_direction_button_up"]
[connection signal="pressed" from="Overlay/Sections/Shortcuts/Sticks/Actions/ButtonY" to="Overlay/Sections/Shortcuts/Sticks" method="_press_button" binds= [3]]
[connection signal="released" from="Overlay/Sections/Shortcuts/Sticks/Actions/ButtonY" to="Overlay/Sections/Shortcuts/Sticks" method="_release_button" binds= [3]]
[connection signal="pressed" from="Overlay/Sections/Shortcuts/Sticks/Actions/ButtonX" to="Overlay/Sections/Shortcuts/Sticks" method="_press_button" binds= [2]]
[connection signal="released" from="Overlay/Sections/Shortcuts/Sticks/Actions/ButtonX" to="Overlay/Sections/Shortcuts/Sticks" method="_release_button" binds= [2]]
[connection signal="pressed" from="Overlay/Sections/Shortcuts/Sticks/Actions/ButtonB" to="Overlay/Sections/Shortcuts/Sticks" method="_press_button" binds= [1]]
[connection signal="released" from="Overlay/Sections/Shortcuts/Sticks/Actions/ButtonB" to="Overlay/Sections/Shortcuts/Sticks" method="_release_button" binds= [1]]
[connection signal="pressed" from="Overlay/Sections/Shortcuts/Sticks/Actions/ButtonA" to="Overlay/Sections/Shortcuts/Sticks" method="_press_button" binds= [0]]
[connection signal="released" from="Overlay/Sections/Shortcuts/Sticks/Actions/ButtonA" to="Overlay/Sections/Shortcuts/Sticks" method="_release_button" binds= [0]]
[connection signal="resized" from="Windows/Floating" to="Windows/Floating" method="_on_window_resized"]
[connection signal="gui_input" from="Windows/Floating/Respawn" to="Windows/Floating/Respawn" method="OnGuiInput"]
[connection signal="gui_input" from="Windows/Floating/Stat" to="Windows/Floating/Stat" method="OnGuiInput"]
